@@ -7,37 +7,40 @@ sourceSets {
 }
 
 ext {
-  guiceVersion = '5.0.1'
+  guiceVersion = '5.1.0'
 }
 
 dependencies {
   // TODO : Some of these can be extracted to actual dependencies
   implementation fileTree(dir: 'lib', include: '*.jar')
 
-  implementation 'com.google.code.gson:gson:2.8.8'
+  implementation 'com.google.code.gson:gson:2.9.0'
   implementation 'com.google.guava:guava:30.1.1-jre'
   implementation "com.google.inject:guice:${guiceVersion}"
   implementation "com.google.inject.extensions:guice-assistedinject:${guiceVersion}"
   implementation "com.google.inject.extensions:guice-servlet:${guiceVersion}"
   implementation 'com.google.truth:truth:1.1.3'
-  implementation 'joda-time:joda-time:2.10.10'
+  implementation 'joda-time:joda-time:2.10.14'
   api 'net.jcip:jcip-annotations:1.0'
-  implementation 'org.springframework:spring-core:5.3.9'
+  implementation 'org.springframework:spring-core:5.3.21'
   compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
-  implementation 'org.checkerframework:checker-qual:3.18.0'
+  implementation 'org.checkerframework:checker-qual:3.22.2'
 
-  implementation 'junit:junit:4.13.1'
-  implementation 'org.testng:testng:7.4.0'
+  implementation 'junit:junit:4.13.2'
+  implementation 'org.testng:testng:7.5'
 
   implementation project(':spotbugs')
   api project(':spotbugs-annotations')
 }
 
 tasks.withType(JavaCompile).configureEach {
+  javaCompiler = javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
   options.compilerArgs << '-Xlint:none'
   options.encoding = 'UTF-8'
-  if (it.name == 'classesJava14') {
-    options.release = 16
+  if (it.name == 'classesJava17') {
+    options.release = 17
   } else if (it.name == 'classesJava11') {
     options.release = 11
   } else if (it.name != 'compileJava') {
@@ -58,38 +61,28 @@ tasks.named('javadoc', Javadoc).configure {
   }
 }
 
-def jvmVersion = JavaVersion.current()
 def classesJava8 = tasks.register('classesJava8', JavaCompile) {
-  destinationDir = file("$buildDir/classes/java/java8")
+  destinationDirectory.set(file("$buildDir/classes/java/java8"))
   classpath = sourceSets.main.compileClasspath
   source = file('src/java8')
 }
 
 def classesJava11 = tasks.register('classesJava11', JavaCompile) {
-  destinationDir = file("$buildDir/classes/java/java11")
+  destinationDirectory.set(file("$buildDir/classes/java/java11"))
   classpath = sourceSets.main.compileClasspath
   source = file('src/java11')
 }
 
-def classesJava14 = tasks.register('classesJava14', JavaCompile) {
-  options.compilerArgs.add('--enable-preview')
-  destinationDir = file("$buildDir/classes/java/java14")
+def classesJava17 = tasks.register('classesJava17', JavaCompile) {
+  destinationDirectory.set(file("$buildDir/classes/java/java14"))
   classpath = sourceSets.main.compileClasspath
   source = file('src/java14')
 }
 
 tasks.named('classes').configure {
   dependsOn classesJava8
-  if (jvmVersion.isCompatibleWith(JavaVersion.VERSION_11)) {
-    dependsOn classesJava11
-  } else {
-    println "skip tests for Java 11 features"
-  }
-  if (jvmVersion.isCompatibleWith(JavaVersion.VERSION_14)) {
-    dependsOn classesJava14
-  } else {
-    println "skip tests for Java 14 features"
-  }
+  dependsOn classesJava11
+  dependsOn classesJava17
 }
 
 sonarqube {
